# mailbridge

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
examples/: README.md  postmark_basic.py  sendgrid_template.py  sengrid_basic.py  sengrid_bulk.py  ses_basic.py  ses_bulk.py  ses_template.py  smtp_basic.py
mailbridge/: __init__.py  client.py  exceptions.py  mail.py  mailer_factory.py
mailbridge/dto/: __init__.py  bulk_email_dto.py  bulk_email_response_dto.py  email_message_dto.py  email_response_dto.py
mailbridge/providers/: __init__.py  base_email_provider.py  brevo_provider.py  mailgun_provider.py  postmark_provider.py  provider_interface.py  sendgrid_provider.py  ses_provider.py  smtp_provider.py
tests/: test_brevo_provider.py  test_mail_facade.py  test_mailbridge_client.py  test_mailer_factory.py  test_mailgun_provider.py  test_postmark_provider.py  test_sendgrid_provider.py  test_ses_provider.py  test_smtp_provider.py
